--- a/style.css
+++ b/style.css
@@ -130,6 +130,9 @@
 .donate-plan .plans .plan:nth-child(1){
     background: #4F9DA61A;
 }
+.donate-plan .plans .plan:nth-child(3){
+    background: #3605710e;
+}
 .donate-plan .plans .plan img{}
 .donate-plan .plans .plan h2 {
     margin: 30px 0;
@@ -321,8 +324,13 @@
     text-align:center;
 
 }
+.update-sect .notification .mail-noti input[type="email"] {
+    border-radius: 5px;
+}
+
 .update-sect .notification .mail-noti input[type="submit"] {
     margin-top: 15px;
     margin-left: 10px;
+    border-radius: 5px;
 }
 }
